ordering has been modified

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -4,12 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Titanic: Machine Learning from Disaster"
+    "### Titanic: Machine Learning from Disaster\n",
+    "\n",
+    "\n",
+    "### Problem\n",
+    "Complete the analysis of what sorts of people were likely to survive.\n",
+    "In particular, we ask you to apply the tools of machine learning to predict which passengers survived the Titanic tragedy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +24,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,15 +32,6 @@
    "source": [
     "from IPython.display import Image\n",
     "Image(\"image/sinking.jpg\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Problem\n",
-    "Complete the analysis of what sorts of people were likely to survive.\n",
-    "In particular, we ask you to apply the tools of machine learning to predict which passengers survived the Titanic tragedy."
    ]
   },
   {
@@ -62,9 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\dhron\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -95,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +279,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -323,6 +328,13 @@
     "print('***'*20)\n",
     "train.info() "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
