--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,6 +289,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Key word Explanation:\n",
+    "Based on the datasets given the keywords used for the data are given below.\n",
+    "\n",
+    "1. Survived: 1,  Dead: 0\n",
+    "2. Pclass (Passenger Class): 1 = First class , 2= Second Class, 3 = Third Class\n",
+    "3. SibSp : Sib = Sibling, sp = Spouse , (This means weather the passenger has sibling of spouse in the Titanic)\n",
+    "4. ParCh : Par = Parents, Ch = Children, (This means parents or childred aboard in the Titanic)\n",
+    "5. Ticket : Ticket Number\n",
+    "6. Fare : Ticket rate\n",
+    "7. Cabin : Cabin number\n",
+    "8. Embarked: Port of origin, S= Southhampton, C = Cherbourg, Q = Queenstown"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -331,10 +348,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 418 entries, 0 to 417\n",
+      "Data columns (total 11 columns):\n",
+      "PassengerId    418 non-null int64\n",
+      "Pclass         418 non-null int64\n",
+      "Name           418 non-null object\n",
+      "Sex            418 non-null object\n",
+      "Age            332 non-null float64\n",
+      "SibSp          418 non-null int64\n",
+      "Parch          418 non-null int64\n",
+      "Ticket         418 non-null object\n",
+      "Fare           417 non-null float64\n",
+      "Cabin          91 non-null object\n",
+      "Embarked       418 non-null object\n",
+      "dtypes: float64(2), int64(4), object(5)\n",
+      "memory usage: 36.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "test.info()"
+   ]
   }
  ],
  "metadata": {
