--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -4781,7 +4781,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -4921,6 +4923,94 @@
    ],
    "source": [
     "train.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Cabin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "B96 B98            4\n",
+       "C23 C25 C27        4\n",
+       "G6                 4\n",
+       "C22 C26            3\n",
+       "F2                 3\n",
+       "D                  3\n",
+       "E101               3\n",
+       "F33                3\n",
+       "D36                2\n",
+       "D26                2\n",
+       "E25                2\n",
+       "B57 B59 B63 B66    2\n",
+       "C93                2\n",
+       "B77                2\n",
+       "C65                2\n",
+       "C124               2\n",
+       "B49                2\n",
+       "D17                2\n",
+       "F4                 2\n",
+       "C68                2\n",
+       "B20                2\n",
+       "E24                2\n",
+       "B51 B53 B55        2\n",
+       "C125               2\n",
+       "E8                 2\n",
+       "B5                 2\n",
+       "C126               2\n",
+       "C2                 2\n",
+       "F G73              2\n",
+       "C52                2\n",
+       "                  ..\n",
+       "B38                1\n",
+       "A36                1\n",
+       "B3                 1\n",
+       "C62 C64            1\n",
+       "A23                1\n",
+       "E36                1\n",
+       "B79                1\n",
+       "E46                1\n",
+       "B50                1\n",
+       "A32                1\n",
+       "D7                 1\n",
+       "C49                1\n",
+       "B42                1\n",
+       "E40                1\n",
+       "A10                1\n",
+       "C148               1\n",
+       "C111               1\n",
+       "C54                1\n",
+       "D15                1\n",
+       "B41                1\n",
+       "E10                1\n",
+       "E77                1\n",
+       "E58                1\n",
+       "B80                1\n",
+       "C50                1\n",
+       "C106               1\n",
+       "E38                1\n",
+       "C7                 1\n",
+       "D28                1\n",
+       "B39                1\n",
+       "Name: Cabin, Length: 147, dtype: int64"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.Cabin.value_counts()"
    ]
   },
   {
